# battery-diagnostics-api

./: .replit  api_docs.py  api_key_manager.py  battery_diagnostics.py  main.py  models.py  pyproject.toml  requirements.txt  storage.ts  tailwind.config.ts  test_api.py  theme.json
attached_assets/: Battery_Specification.xlsx  Pasted--RUNNING-API-TESTS-test-session--1740988030829.txt  cloud_upaj_org.md  cloud_upaj_org_api-detail_moisture_irrigation_index.md  cloud_upaj_org_api-list.md  e7f5308e-2bfb-4fed-8579-1a89ea95003b-00-17enddu16pltz_spock_replit_dev_health.md
client/src/: App.tsx  index.css
client/src/components/: api-card.tsx  features-grid.tsx  footer.tsx  hero-section.tsx
client/src/components/navigation/: navbar.tsx
client/src/components/ui/: chart.tsx  navbar.tsx  progress.tsx  sheet.tsx  sidebar.tsx
client/src/pages/: alert-settings.tsx  api-detail.tsx  api-list.tsx  dashboard.tsx  home.tsx
docs/: api-architecture-diagram.md  api-structure.md
server/: battery_diagnostics.py  main.py  models.py  routes.ts  run.py  storage.ts  test_api.py  test_soc_api.py
shared/: schema.ts
