[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "firebase-admin>=6.6.0",
    "httpx>=0.28.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "starlette>=0.45.3",
    "uvicorn>=0.34.0",
]
